maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: value &&! is not a member of Boolean
  while (getY()!=0&&!estSurBiscuit()){
                  ^